<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.stupa.core.auth.data.viewmodel.SignupViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".core.auth.ui.SignupActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_gradient"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_app_logo"
                app:layout_constraintBottom_toTopOf="@id/name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/edit_card"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:text="@={viewModel.name}"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/email"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_card"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.emailid}"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintBottom_toTopOf="@id/phone"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_card"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:text="@={viewModel.mobileno}"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintBottom_toTopOf="@id/password"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_card"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintBottom_toTopOf="@id/city_spinner"
                app:layout_constraintTop_toBottomOf="@id/phone" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/city_spinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/spinner_drawable"
                android:letterSpacing="0.1"
                android:onItemSelected="@{(parent,view,pos,id)->viewModel.onSelectItem(parent,view,pos,id)}"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/gender_container"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <LinearLayout
                android:id="@+id/gender_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_card"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/signup"
                app:layout_constraintTop_toBottomOf="@id/city_spinner">

                <RadioGroup
                    android:id="@+id/gender_group"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:checkedButton="@+id/male"
                    android:gravity="center_vertical"
                    android:onCheckedChanged="@{viewModel.onCheckedChanged}"
                    android:orientation="horizontal"
                    android:paddingStart="20dp">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_male"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:buttonTint="@android:color/white" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_female"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:buttonTint="@android:color/white" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_other"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:buttonTint="@android:color/white" />
                </RadioGroup>
            </LinearLayout>


            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_bg"
                android:onClick="@{()->viewModel.onSignUpButtonClick()}"
                android:text="@string/text_signup"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/tv_already_have_an_account"
                app:layout_constraintLeft_toLeftOf="@id/gender_container"
                app:layout_constraintTop_toBottomOf="@id/gender_container" />

            <TextView
                android:id="@+id/tv_already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/txt_already_have_an_account"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/view"
                app:layout_constraintStart_toStartOf="@+id/signup"
                app:layout_constraintTop_toBottomOf="@id/signup" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:onClick="@{()->viewModel.openLogin()}"
                android:padding="6dp"
                android:text="@string/text_login"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_already_have_an_account"
                app:layout_constraintLeft_toRightOf="@id/tv_already_have_an_account"
                app:layout_constraintTop_toTopOf="@id/tv_already_have_an_account" />

            <View
                android:id="@+id/view"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="#f4f5f6"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_already_have_an_account"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleLargeInverse"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_30"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorAccent"
                android:indeterminateTintMode="src_atop"
                android:visibility="@{viewModel.progress}"
                app:layout_constraintBottom_toBottomOf="@+id/signup"
                app:layout_constraintStart_toEndOf="@+id/signup"
                app:layout_constraintTop_toTopOf="@+id/signup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>