<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.stupa.core.auth.data.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".core.auth.ui.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_gradient"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_app_logo"
                app:layout_constraintBottom_toTopOf="@id/email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="250dp" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_card"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="25dp"
                android:text="@={viewModel.emailid}"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                app:boxStrokeColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/guideline" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_card"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="25dp"
                android:text="@={viewModel.password}"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                app:boxStrokeColor="@color/white"

                app:layout_constraintTop_toBottomOf="@id/email" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/login_bg"
                android:onClick="@{()->viewModel.onLoginButtonClick()}"
                android:text="@string/text_login"
                android:textColor="@color/white"
                app:layout_constraintHorizontal_bias="0.154"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/tv_already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/txt_dont_have_account"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/login"
                app:layout_constraintTop_toBottomOf="@id/login" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:onClick="@{()->viewModel.openSignup()}"
                android:padding="6dp"
                android:text="@string/text_signup"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_already_have_an_account"
                app:layout_constraintLeft_toRightOf="@id/tv_already_have_an_account"
                app:layout_constraintTop_toTopOf="@id/tv_already_have_an_account" />

            <View
                android:id="@+id/view"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="#f4f5f6"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_already_have_an_account"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleLargeInverse"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_30"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorAccent"
                android:indeterminateTintMode="src_atop"
                android:visibility="@{viewModel.progress}"
                app:layout_constraintBottom_toBottomOf="@+id/login"
                app:layout_constraintStart_toEndOf="@+id/login"
                app:layout_constraintTop_toTopOf="@+id/login" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>